# ipyform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: colab_offical.ipynb
src/ipyform/: __init__.py  entities.py  env.py  ipython_ext.py  parser.py  widgets.py
tests/: test_ipython_ext.py  test_parser.py  test_widgets.py
